--- a/public/posts/about.mdx
+++ b/public/posts/about.mdx
@@ -12,5 +12,5 @@ The content is built as a basic NEXT.js blog and stored in [this GitHub reposito
 
 ### Next
 
-- Return to the <Link href='/'>Home Page</Link>.
-- For a list of all blog posts see the <Link href='/posts/index'>Index Page</Link>.
+- Return to the <a href='home.mdx'>Home Page</a>.
+- For a list of all blog posts see the <a href='index.mdx'>Index Page</a>.
