--- a/public/posts/basicandroidapp-execution.mdx
+++ b/public/posts/basicandroidapp-execution.mdx
@@ -1,9 +1,9 @@
 # How to Run the Android Code Sample
 
-Previously we provided an <Link href='/posts/android-code-sample-overview'>Android Code Sample Overview</Link> and next we will describe how to run and test the code sample. Readers who are new to Android development may also want to browse these earlier pages:
+Previously we provided an <a href='android-code-sample-overview'>Android Code Sample Overview</a> and next we will describe how to run and test the code sample. Readers who are new to Android development may also want to browse these earlier pages:
 
-- <Link href='/posts/android-setup'>Android Setup and the AppAuth Sample</Link>
-- <Link href='/posts/android-https-debugging'>Android HTTPS Debugging</Link>
+- <a href='android-setup'>Android Setup and the AppAuth Sample</a>
+- <a href='android-https-debugging'>Android HTTPS Debugging</a>
 
 ### Prerequisite: Install Android Studio
 
@@ -328,5 +328,5 @@ We have shown how to run this blog’s Android code sample,  and test its techni
 
 ### Next
 
-- Next we will describe some required <Link href='/posts/android-infrastructure-setup'>Android Mobile Infrastructure</Link>
-- For a list of all blog posts see the <Link href='/posts/index'>Index Page</Link>
+- Next we will describe some required <a href='android-infrastructure-setup'>Android Mobile Infrastructure</a>
+- For a list of all blog posts see the <a href='index'>Index Page</a>
