--- a/public/posts/basicspa-codingkeypoints.mdx
+++ b/public/posts/basicspa-codingkeypoints.mdx
@@ -1,6 +1,6 @@
 # Basic SPA – Code Details
 
-The <Link href='/posts/basicspa-oauthworkflow'>SPA and API OAuth Messages</Link> post explained the initial code sample's HTTP/S messages. In this post I drill into some identity-related code in the SPA.
+The <a href='basicspa-oauthworkflow'>SPA and API OAuth Messages</a> post explained the initial code sample's HTTP/S messages. In this post I drill into some identity-related code in the SPA.
 
 ### SPA Code
 
@@ -515,5 +515,5 @@ I summarised the initial SPA's code, where the oidc-client-ts security library i
 
 ### Next
 
-- I explain some <Link href='/posts/basicapi-codingkeypoints'>API Code Details</Link> for the first code sample.
-- For a list of all blog posts see the <Link href='/posts/index'>Index Page</Link>.
+- I explain some <a href='basicapi-codingkeypoints'>API Code Details</a> for the first code sample.
+- For a list of all blog posts see the <a href='index'>Index Page</a>.
