--- a/public/posts/basicspa-execution.mdx
+++ b/public/posts/basicspa-execution.mdx
@@ -1,6 +1,6 @@
 # Basic SPA – How to Run the Sample
 
-Previously I summarised the behaviour of the initial <Link href='/posts/basicspa-overview'>SPA and API Code Sample</Link>. Next I show how to run it on a development computer, then visually describe the important OAuth related behaviour.
+Previously I summarised the behaviour of the initial <a href='basicspa-overview'>SPA and API Code Sample</a>. Next I show how to run it on a development computer, then visually describe the important OAuth related behaviour.
 
 ### Prerequisites
 
@@ -69,8 +69,8 @@ The API acts as an *OAuth Resource Server* and uses these configuration values.
 
 Both the SPA and API use endpoints from my personal AWS Cognito account, which is a low cost cloud solution. Jump ahead to these future posts for further details:
 
-- <Link href='/posts/oauth-infrastructure-setup'>OAuth Infrastructure Setup</Link>
-- <Link href='/posts/managed-authorization-server-setup'>AWS Cognito Cloud Setup</Link>
+- <a href='oauth-infrastructure-setup'>OAuth Infrastructure Setup</a>
+- <a href='managed-authorization-server-setup'>AWS Cognito Cloud Setup</a>
 
 You must register OAuth clients at the authorization server, and the SPA includes the following entry:
 
@@ -143,7 +143,7 @@ The second terminal is for the API, which listens on port 80, and requires admin
 
 ![Running API](../images/30/running-api.jpg?v=20240824)
 
-To simplify the developer setup, the API also serves the SPA’s bundle files to the browser. A real web host is used later in this blog, when the SPA is deployed to a <Link href="/posts/cdn-static-content-delivery">content delivery network</Link>.
+To simplify the developer setup, the API also serves the SPA’s bundle files to the browser. A real web host is used later in this blog, when the SPA is deployed to a <a href="cdn-static-content-delivery.mdx">content delivery network</a>.
 
 ### Step 8: Login to the SPA
 
@@ -199,5 +199,5 @@ The initial code sample integrates an SPA, API and authorization server. This po
 
 ### Next
 
-- Next I explain some <Link href='/posts/basicspa-oauthworkflow'>SPA and API OAuth Messages</Link>.
-- For a list of all blog posts see the <Link href='/posts/index'>Index Page</Link>.
+- Next I explain some <a href='basicspa-oauthworkflow'>SPA and API OAuth Messages</a>.
+- For a list of all blog posts see the <a href='index'>Index Page</a>.
