--- a/public/posts/basicspa-overview.mdx
+++ b/public/posts/basicspa-overview.mdx
@@ -1,6 +1,6 @@
 # Basic SPA – Overview
 
-In the <Link href='/posts/web-architecture-goals'>Web Architecture Goals</Link> post I summarised some desired qualities. The first step is to run an integrated code sample on a development computer, so that access tokens are sent between an SPA, API and authorization server.
+In the <a href='web-architecture-goals'>Web Architecture Goals</a> post I summarised some desired qualities. The first step is to run an integrated code sample on a development computer, so that access tokens are sent between an SPA, API and authorization server.
 
 ### Behaviours
 
@@ -22,7 +22,7 @@ The Basic SPA Code Sample will get the below components and endpoints talking to
 
 ### SPAs in 2021
 
-This sample uses the traditional SPA solution, with a JavaScript OpenID Connect implementation. It is now considered more secure for your production apps to instead use a <Link href='/posts/spa-back-end-for-front-end'>Backend for Frontend</Link> approach.
+This sample uses the traditional SPA solution, with a JavaScript OpenID Connect implementation. It is now considered more secure for your production apps to instead use a <a href='spa-back-end-for-front-end'>Backend for Frontend</a> approach.
 
 The traditional SPA flow remains useful when you first learn OAuth, and to represent a pure SPA architecture.
 
@@ -57,7 +57,7 @@ I use modern web technology, but avoid web frameworks to start with, to establis
 | Step | Details |
 | ---- | ------- |
 | SPA OAuth Code Integration | First show how to integrate standards-based OAuth support into an SPA with a focus on OAuth requirements. |
-| Modern SPA Framework | Avoid getting sidetracked by too much web technology initially, though this blog's <Link href="/posts/final-spa-overview">Final SPA</Link> uses React. |
+| Modern SPA Framework | Avoid getting sidetracked by too much web technology initially, though this blog's <a href='final-spa-overview.mdx'>Final SPA</a> uses React. |
 
 ### Code Sample Theme
 
@@ -80,5 +80,5 @@ I explained the initial code sample's behaviour, to integrate an SPA, the API an
 
 ### Next
 
-- Next I explain <Link href='/posts/basicspa-execution'>How to Run the Code Sample</Link>.
-- For a list of all blog posts see the <Link href='/posts/index'>Index Page</Link>.
+- Next I explain <a href='basicspa-execution'>How to Run the Code Sample</a>.
+- For a list of all blog posts see the <a href='index'>Index Page</a>.
