--- a/public/posts/cloud-hosting.mdx
+++ b/public/posts/cloud-hosting.mdx
@@ -1,10 +1,10 @@
 # Cloud Hosting Overview
 
-Previously we completed our mobile theme by discussing <Link href='/posts/ios-code-sample-coding-key-points'>Code Details</Link> for our iOS code sample. Next we will begin a theme on modern deployment, and describe how the corresponding cloud infrastructure was created.
+Previously we completed our mobile theme by discussing <a href='ios-code-sample-coding-key-points'>Code Details</a> for our iOS code sample. Next we will begin a theme on modern deployment, and describe how the corresponding cloud infrastructure was created.
 
 ### URL Design
 
-I started by <Link href='/posts/oauth-infrastructure-setup'>Defining Base URLs</Link>, and this blog uses a subdomain approach, to represent component separation on a small scale. Each subdomain can point to a particular cloud hosting feature, for APIs, web static content or the authorization server.
+I started by <a href='oauth-infrastructure-setup'>Defining Base URLs</a>, and this blog uses a subdomain approach, to represent component separation on a small scale. Each subdomain can point to a particular cloud hosting feature, for APIs, web static content or the authorization server.
 
 | Domain | Description |
 | ------ | ----------- |
@@ -79,7 +79,7 @@ Earlier in this blog we chose AWS Cognito as an initial low-cost authorization s
 
 ### Cloud Connected Code Samples
 
-Use of cloud hosting enables any reader of this blog to run this blog’s OAuth code samples. The <Link href='/posts/quick-start'>Code Samples Quick Start</Link> page provides details of online URLs and guest credentials for running the demo apps.
+Use of cloud hosting enables any reader of this blog to run this blog’s OAuth code samples. The <a href='quick-start'>Code Samples Quick Start</a> page provides details of online URLs and guest credentials for running the demo apps.
 
 <div className='smallimage'>
     <img src='../images/580/cloud-login.jpg' alt='cloud login' />
@@ -87,7 +87,7 @@ Use of cloud hosting enables any reader of this blog to run this blog’s OAuth 
 
 ### Centralized API Logs
 
-APIs will use this blog’s <Link href='/posts/effective-api-logging'>Effective API Logging</Link> design to write immediate log data to AWS CloudWatch. These logs could then be aggregated and queried using <Link href='/posts/api-technical-support-analysis'>Technical Support Queries</Link>.
+APIs will use this blog’s <a href='effective-api-logging'>Effective API Logging</a> design to write immediate log data to AWS CloudWatch. These logs could then be aggregated and queried using <a href='api-technical-support-analysis'>Technical Support Queries</a>.
 
 ### Lost Cost Initial Hosting
 
@@ -105,7 +105,7 @@ We have provided an overview of this blog's cloud hosting, and the following blo
 
 ### Next
 
-- Next we will explain details of our <Link href='/posts/cloud-domain-setup'>Cloud Domain Setup</Link>
-- For a list of all blog posts see the <Link href='/posts/index'>Index Page</Link>
+- Next we will explain details of our <a href='cloud-domain-setup'>Cloud Domain Setup</a>
+- For a list of all blog posts see the <a href='index'>Index Page</a>
 
 
