--- a/public/posts/desktop-app-coding-key-points.mdx
+++ b/public/posts/desktop-app-coding-key-points.mdx
@@ -1,10 +1,10 @@
 # Desktop App – Code Details
 
-Previously I summarised some test behavior in <Link href='/posts/desktop-app-how-to-run-the-code-sample'>How to Run the Desktop Code Sample</Link>. I complete the content for the initial desktop app with some code-level details.
+Previously I summarised some test behavior in <a href='desktop-app-how-to-run-the-code-sample'>How to Run the Desktop Code Sample</a>. I complete the content for the initial desktop app with some code-level details.
 
 ### Code Layout
 
-Electron apps have two processes, [Main and Renderer](https://www.electronjs.org/docs/latest/tutorial/process-model) where the renderer process is an SPA frontend and the main process is a backend that uses Node.js. The folder structure of the desktop app reflects this, with *main*, *renderer* and *shared* folders. The views within the renderer process use plain JavaScript and are the same as those from this blog's <Link href=''>Second SPA</Link>.
+Electron apps have two processes, [Main and Renderer](https://www.electronjs.org/docs/latest/tutorial/process-model) where the renderer process is an SPA frontend and the main process is a backend that uses Node.js. The folder structure of the desktop app reflects this, with *main*, *renderer* and *shared* folders. The views within the renderer process use plain JavaScript and are the same as those from this blog's <a href='improved-spa-code-sample-overview.mdx'>Second SPA</a>.
 
 ![code layout](../images/430/code-layout.jpg?v=20240922)
 
@@ -235,7 +235,7 @@ The following main classes are used to handle OAuth and API logic. The strategy 
 
 ### Debugging HTTP Requests
 
-One consequence of this design is that you cannot easily view HTTP requests that the renderer process initiates. To view the requests you can use an <Link href='/posts/http-debugging-setup'>HTTP proxy tool</Link>. The easiest option is to run the tool and change your network settings, then edit the *desktop.config.json* file to activate the proxy, then run the desktop app with the following commands:
+One consequence of this design is that you cannot easily view HTTP requests that the renderer process initiates. To view the requests you can use an <a href='http-debugging-setup'>HTTP proxy tool</a>. The easiest option is to run the tool and change your network settings, then edit the *desktop.config.json* file to activate the proxy, then run the desktop app with the following commands:
 
 ```bash
 export NODE_TLS_REJECT_UNAUTHORIZED=0
@@ -591,5 +591,5 @@ I explained some Electron mechanics and the integration of the AppAuth-JS librar
 
 ### Next
 
-- I provide a <Link href='/posts/final-desktop-sample-overview'>Final Desktop Code Sample</Link> with some additional behaviors.
-- For a list of all blog posts see the <Link href='/posts/index'>Index Page</Link>.
+- I provide a <a href='final-desktop-sample-overview'>Final Desktop Code Sample</a> with some additional behaviors.
+- For a list of all blog posts see the <a href='index'>Index Page</a>.
