--- a/public/posts/final-desktop-app-coding-key-points.mdx
+++ b/public/posts/final-desktop-app-coding-key-points.mdx
@@ -1,6 +1,6 @@
 # Final Desktop App – Code Details
 
-Previously I summarised the behavior of the <Link href='/posts/final-desktop-sample-overview'>Final Desktop Code Sample</Link>. This post provides an overview of the app's code changes. See also the <Link href='/posts/api-journey-client-side'>Client Side API Journey</Link> to understand the background and the requirements being met.
+Previously I summarised the behavior of the <a href='final-desktop-sample-overview'>Final Desktop Code Sample</a>. This post provides an overview of the app's code changes. See also the <a href='api-journey-client-side'>Client Side API Journey</a> to understand the background and the requirements being met.
 
 ### Code Layout
 
@@ -12,7 +12,7 @@ The app has the same code layout as the initial desktop code sample, to represen
 
 ### React Update
 
-I updated the Electron app to use React. This mostly involved just copying in the completed views from this blog's <Link href='/posts/reactjs-codingkeypoints'>Final SPA</Link>:
+I updated the Electron app to use React. This mostly involved just copying in the completed views from this blog's <a href='reactjs-codingkeypoints'>Final SPA</a>:
 
 ```jsx
 return (
@@ -204,5 +204,5 @@ I updated the desktop app with new features that improve usability, to complete 
 
 ### Next
 
-- I explain an initial <Link href='/posts/android-setup'>Android Setup</Link> that includes running the AppAuth Andoid code sample.
-- For a list of all blog posts see the <Link href='/posts/index'>Index Page</Link>.
+- I explain an initial <a href='android-setup'>Android Setup</a> that includes running the AppAuth Andoid code sample.
+- For a list of all blog posts see the <a href='index'>Index Page</a>.
