--- a/public/posts/home.mdx
+++ b/public/posts/home.mdx
@@ -44,5 +44,5 @@ I summarised blog goals and the first objective is a code sample that integrates
 
 ### Next
 
-- I summarise some <Link href='/posts/web-architecture-goals'>Web Architecture Goals</Link>.
-- For a list of all blog posts see the <Link href='/posts/index'>Index Page</Link>.
+- I summarise some <a href='web-architecture-goals'>Web Architecture Goals</a>.
+- For a list of all blog posts see the <a href='index'>Index Page</a>.
