--- a/public/posts/how-to-run-the-ios-code-sample.mdx
+++ b/public/posts/how-to-run-the-ios-code-sample.mdx
@@ -1,9 +1,9 @@
 # How to Run the iOS Code Sample
 
-Previously we provided an an <Link href='/posts/ios-code-sample-overview'>iOS Code Sample Overview</Link> and next we will describe how to run and test the code sample. For details on getting started with AppAuth libraries, and tracing OAuth requests, see these earlier pages:
+Previously we provided an an <a href='ios-code-sample-overview'>iOS Code Sample Overview</a> and next we will describe how to run and test the code sample. For details on getting started with AppAuth libraries, and tracing OAuth requests, see these earlier pages:
 
-- <Link href='/posts/ios-setup'>iOS Setup and the AppAuth Sample</Link>
-- <Link href='/posts/ios-https-debugging'>iOS HTTPS Debugging</Link>
+- <a href='ios-setup'>iOS Setup and the AppAuth Sample</a>
+- <a href='ios-https-debugging'>iOS HTTPS Debugging</a>
 
 ### Prerequisite 1: Install Xcode
 
@@ -228,5 +228,5 @@ We have shown how to run this blog’s iOS code sample,  and test its technical 
 
 ### Next
 
-- Next we will describe some required <Link href='/posts/ios-code-sample-infrastructure'>iOS Mobile Infrastructure</Link>
-- For a list of all blog posts see the <Link href='/posts/index'>Index Page</Link>
+- Next we will describe some required <a href='ios-code-sample-infrastructure'>iOS Mobile Infrastructure</a>
+- For a list of all blog posts see the <a href='index'>Index Page</a>
