--- a/public/posts/ios-code-sample-infrastructure.mdx
+++ b/public/posts/ios-code-sample-infrastructure.mdx
@@ -1,10 +1,10 @@
 # iOS Code Sample – Infrastructure
 
-Previously we described <Link href='/posts/how-to-run-the-ios-code-sample'>How to Run the iOS Code Sample</Link>, and next we will focus further on the infrastructure used by our OAuth solution.
+Previously we described <a href='how-to-run-the-ios-code-sample'>How to Run the iOS Code Sample</a>, and next we will focus further on the infrastructure used by our OAuth solution.
 
 ### AWS CloudFront Domains
 
-Our iOS sample uses 2 online domains, which we configured previously as part of our <Link href='/posts/cloud-domain-setup'>Cloud Domain Setup</Link>:
+Our iOS sample uses 2 online domains, which we configured previously as part of our <a href='cloud-domain-setup'>Cloud Domain Setup</a>:
 
 | Domain | Usage |
 | ------ | ----- |
@@ -17,7 +17,7 @@ Our web pages are first uploaded to an AWS S3 bucket:
 
 ![s3 bucket](../images/560/s3-bucket.jpg?v=20240914)
 
-They are then included in one of this blog’s <Link href='/posts/cdn-static-content-delivery'>CloudFront Distributions</Link>, so that the pages are served over an HTTPS URL:
+They are then included in one of this blog’s <a href='cdn-static-content-delivery'>CloudFront Distributions</a>, so that the pages are served over an HTTPS URL:
 
 ![cloudfront distro](../images/560/cloudfront-distro.jpg?v=20240914)
 
@@ -151,5 +151,5 @@ We have explained some infrastructure plumbing needed by our iOS code sample. Us
 
 ### Next
 
-- Next we will describe some <Link href='/posts/ios-code-sample-coding-key-points'>iOS Code Details</Link>
-- For a list of all blog posts see the <Link href='/posts/index'>Index Page</Link>
+- Next we will describe some <a href='ios-code-sample-coding-key-points'>iOS Code Details</a>
+- For a list of all blog posts see the <a href='index'>Index Page</a>
