--- a/public/posts/ios-setup.mdx
+++ b/public/posts/ios-setup.mdx
@@ -1,6 +1,6 @@
 # iOS Setup and AppAuth Sample
 
-Previously we completed our <Link href='/posts/android-https-debugging'>Android HTTP Debugging Setup</Link>. Next we will get a basic iOS OAuth setup working, via the AppAuth iOS code sample.
+Previously we completed our <a href='android-https-debugging'>Android HTTP Debugging Setup</a>. Next we will get a basic iOS OAuth setup working, via the AppAuth iOS code sample.
 
 ### Step 1: Sign up with Apple
 
@@ -119,9 +119,9 @@ After login, control returns to the mobile app, which has an ID token, an access
 
 ### Where Are We?
 
-We have gained an initial understanding of how to run an OAuth-secured mobile app from Xcode. Shortly we will describe this blog’s <Link href='/posts/ios-code-sample-overview'>iOS Code Sample</Link>, which demonstrates much more complete behaviour.
+We have gained an initial understanding of how to run an OAuth-secured mobile app from Xcode. Shortly we will describe this blog’s <a href='ios-code-sample-overview'>iOS Code Sample</a>, which demonstrates much more complete behaviour.
 
 ### Next
 
-- Next we will focus on <Link href='/posts/ios-https-debugging'>HTTPS Debugging on iOS</Link>
-- For a list of all blog posts see the <Link href='/posts/index'>Index Page</Link>
+- Next we will focus on <a href='ios-https-debugging'>HTTPS Debugging on iOS</a>
+- For a list of all blog posts see the <a href='index'>Index Page</a>
