--- a/public/posts/native-architecture-goals.mdx
+++ b/public/posts/native-architecture-goals.mdx
@@ -1,8 +1,8 @@
 # Native Architecture Goals
 
-Previously we completed our API theme by covering some people focused <Link href='/posts/api-technical-support-analysis'>API Technical Support Analysis</Link>. Next we will build *OAuth Secured Native Apps* that connect to this blog’s cloud endpoints.
+Previously we completed our API theme by covering some people focused <a href='api-technical-support-analysis'>API Technical Support Analysis</a>. Next we will build *OAuth Secured Native Apps* that connect to this blog’s cloud endpoints.
 
-At the start of this blog, the <Link href='/posts/web-architecture-goals'>Web Architecture Goals</Link> post articulated some high level qualities to aim for in a modern web application. This post  provides a similar summary for mobile and desktop apps. I recommend  monitoring important outcomes, to ensure that they are being achieved.
+At the start of this blog, the <a href='web-architecture-goals'>Web Architecture Goals</a> post articulated some high level qualities to aim for in a modern web application. This post  provides a similar summary for mobile and desktop apps. I recommend  monitoring important outcomes, to ensure that they are being achieved.
 
 ### Consistent Frontend Architecture
 
@@ -12,7 +12,7 @@ Therefore all of this blog’s frontend apps use identical classes, with the sam
 
 ### Portable Frontend Technology
 
-The <Link href='/posts/final-spa-overview'>Final SPA</Link> was developed using React, and ideally a company should be able to use the same technology stack for native apps. At a real company, this would enable teams to easily switch from SPA to mobile development.
+The <a href='final-spa-overview'>Final SPA</a> was developed using React, and ideally a company should be able to use the same technology stack for native apps. At a real company, this would enable teams to easily switch from SPA to mobile development.
 
 However, web stacks are focused on rendering views and updating the DOM, whereas native apps need to do more than this. The best tool for the job must be chosen, with the least scope for blocking technical issues.
 
@@ -58,5 +58,5 @@ This post clarified some key behaviour that will be delivered in this blog’s n
 
 ### Next
 
-- Our next post will provide an <Link href='/posts/desktop-apps-overview'>Initial Desktop Sample Overview</Link>
-- For a list of all blog posts see the <Link href='/posts/index'>Index Page</Link>
+- Our next post will provide an <a href='desktop-apps-overview'>Initial Desktop Sample Overview</a>
+- For a list of all blog posts see the <a href='index'>Index Page</a>
