--- a/public/posts/spa-back-end-for-front-end.mdx
+++ b/public/posts/spa-back-end-for-front-end.mdx
@@ -1,6 +1,6 @@
 # SPA Backend for Frontend
 
-In the previous post I ran a <Link href='/posts/azure-ad-troubleshooting'>Microsoft Entra ID SPA and API OAuth Flow</Link>. This blog's example SPA now needs hardening before it is final, to follow security best practices in the browser and to minimize threats. The SPA must also resolve its <Link href='/posts/user-sessions-and-token-renewal'>Token Renewal Usability and Reliability Issues</Link>.
+In the previous post I ran a <a href='azure-ad-troubleshooting'>Microsoft Entra ID SPA and API OAuth Flow</a>. This blog's example SPA now needs hardening before it is final, to follow security best practices in the browser and to minimize threats. The SPA must also resolve its <a href='user-sessions-and-token-renewal'>Token Renewal Usability and Reliability Issues</a>.
 
 ### Security Best Practices for SPAs
 
@@ -106,5 +106,5 @@ I explained the deployment variations for this blog's final SPA. When you use co
 
 ### Next
 
-- I provide a <Link href='/posts/final-spa-overview'>Final SPA</Link> that uses cookies to call APIs.
-- For a list of all blog posts see the <Link href='/posts/index'>Index Page</Link>.
+- I provide a <a href='final-spa-overview'>Final SPA</a> that uses cookies to call APIs.
+- For a list of all blog posts see the <a href='index'>Index Page</a>.
