--- a/public/posts/web-technology-setup.mdx
+++ b/public/posts/web-technology-setup.mdx
@@ -1,6 +1,6 @@
 # JavaScript Technology Setup
 
-Previously I suggested an <Link href='/posts/oauth-infrastructure-setup'>OAuth Infrastructure Setup</Link>. In this post I explain how this blog uses JavaScript technology, for Node.js APIs, browser based apps and Electron desktop apps. I summarise a way to think about web technology so that it meets your requirements.
+Previously I suggested an <a href='oauth-infrastructure-setup'>OAuth Infrastructure Setup</a>. In this post I explain how this blog uses JavaScript technology, for Node.js APIs, browser based apps and Electron desktop apps. I summarise a way to think about web technology so that it meets your requirements.
 
 ### Modern Productive Code
 
@@ -573,13 +573,13 @@ I explained how to manage a web pipeline on a development computer. Later in thi
 
 ### Electron Desktop Apps
 
-In the native apps section of this blog I use [Electron](https://www.electronjs.org/) to develop OAuth-secured cross-platform desktop apps. An Electron app can also be built to ECMAScript modules, though doing so is a little tricky to figure out. The <Link href='/posts/desktop-app-coding-key-points'>Desktop App - Code Details</Link> post explains the techniques I use.
+In the native apps section of this blog I use [Electron](https://www.electronjs.org/) to develop OAuth-secured cross-platform desktop apps. An Electron app can also be built to ECMAScript modules, though doing so is a little tricky to figure out. The <a href='desktop-app-coding-key-points'>Desktop App - Code Details</a> post explains the techniques I use.
 
 ### Where Are We?
 
-I explained a modern and productive setup and aimed to keep the web technology understandable. I use the same technical approach when I switch to the React framework for this blog's <Link href='/posts/final-spa-overview'>Final SPA</Link>.
+I explained a modern and productive setup and aimed to keep the web technology understandable. I use the same technical approach when I switch to the React framework for this blog's <a href='final-spa-overview'>Final SPA</a>.
 
 ### Next
 
-- I explain a <Link href='/posts/http-debugging-setup'>Development HTTP Proxy Setup</Link>.
-- For a list of all blog posts see the <Link href='/posts/index'>Index Page</Link>.
+- I explain a <a href='http-debugging-setup'>Development HTTP Proxy Setup</a>.
+- For a list of all blog posts see the <a href='index'>Index Page</a>.
