--- a/public/posts/basicapi-codingkeypoints.mdx
+++ b/public/posts/basicapi-codingkeypoints.mdx
@@ -1,6 +1,6 @@
 # Basic API – Code Details
 
-The previous post explained some <Link href='/posts/basicspa-codingkeypoints'>SPA Code Details</Link> for the initial code sample. This post provides a similar breakdown for the API.
+The previous post explained some <a href='basicspa-codingkeypoints'>SPA Code Details</a> for the initial code sample. This post provides a similar breakdown for the API.
 
 ### Code Layout
 
@@ -119,7 +119,7 @@ public initializeWebStaticContentHosting(): void {
 }
 ```
 
-In a real deployment you would use a separate web host component, and for SPAs this is often a content delivery network. The <Link href='/posts/final-spa-overview'>Final SPA</Link> switches to a dedicated web host for development and a CDN for deployed environments.
+In a real deployment you would use a separate web host component, and for SPAs this is often a content delivery network. The <a href='final-spa-overview'>Final SPA</a> switches to a dedicated web host for development and a CDN for deployed environments.
 
 ### Service Logic Classes
 
@@ -221,7 +221,7 @@ public async execute(request: Request): Promise<ClaimsPrincipal> {
 }
 ```
 
-The API must provide correct inputs to the library, so it is important for API developers to understand the inputs. These are summarised in a separate <Link href='/posts/jwt-access-token-validation'>Access Token Validation</Link> post.
+The API must provide correct inputs to the library, so it is important for API developers to understand the inputs. These are summarised in a separate <a href='jwt-access-token-validation'>Access Token Validation</a> post.
 
 ### Claims Principal
 
@@ -397,7 +397,7 @@ Errors are included in logs, where I log backend errors, such as network errors 
 
 ### Supportability
 
-Future posts drill much deeper into <Link href='/posts/effective-api-logging'>logging</Link> and <Link href='/posts/error-handling-and-supportability'>error handling</Link>. These are high value areas for backend systems, and you improve people productivity when you implement them in a solid end-to-end manner.
+Future posts drill much deeper into <a href='effective-api-logging'>logging</a> and <a href='error-handling-and-supportability'>error handling</a>. These are high value areas for backend systems, and you improve people productivity when you implement them in a solid end-to-end manner.
 
 ### Where Are We?
 
@@ -405,5 +405,5 @@ The initial API integrates with an authorization server and validates JWTs corre
 
 ### Next
 
-- Next I summarise how to work with <Link href='/posts/jwt-access-token-validation'>JWT Access Token Validation</Link> in APIs.
-- For a list of all blog posts see the <Link href='/posts/index'>Index Page</Link>.
+- Next I summarise how to work with <a href='jwt-access-token-validation'>JWT Access Token Validation</a> in APIs.
+- For a list of all blog posts see the <a href='index'>Index Page</a>.
