--- a/public/posts/index.mdx
+++ b/public/posts/index.mdx
@@ -1,55 +1,55 @@
 # Main Index
 
-- <Link href='/'>Home Page and Business Goals</Link>
+- <a href='home.mdx'>Home Page and Business Goals</a>
 
 ### Theme 1 - Single Page Applications
 
 The first theme focuses on foundations and core concepts. It provides integrated solutions with SPAs, APIs and the authorization server, and delivers a final SPA in line with current best practices.
 
-- <Link href='/posts/web-architecture-goals'>Web Architecture Goals</Link>
+- <a href='web-architecture-goals'>Web Architecture Goals</a>
 
 **Basic SPA Code Sample**
 
-- <Link href='/posts/basicspa-overview'>Overview</Link>
-- <Link href='/posts/basicspa-execution'>How to Run the Sample</Link>
-- <Link href='/posts/basicspa-oauthworkflow'>OAuth Messages</Link>
-- <Link href='/posts/basicspa-codingkeypoints'>SPA Code Details</Link>
-- <Link href='/posts/basicapi-codingkeypoints'>API Code Details</Link>
-- <Link href='/posts/jwt-access-token-validation'>JWT Access Token Validation</Link>
+- <a href='basicspa-overview'>Overview</a>
+- <a href='basicspa-execution'>How to Run the Sample</a>
+- <a href='basicspa-oauthworkflow'>OAuth Messages</a>
+- <a href='basicspa-codingkeypoints'>SPA Code Details</a>
+- <a href='basicapi-codingkeypoints'>API Code Details</a>
+- <a href='jwt-access-token-validation'>JWT Access Token Validation</a>
 
 **OAuth Setup**
 
-- <Link href='/posts/oauth-infrastructure-setup'>OAuth Infrastructure Setup</Link>
-- <Link href='/posts/web-technology-setup'>JavaScript Technology Setup</Link>
-- <Link href='/posts/http-debugging-setup'>HTTP Proxy Setup</Link>
-- <Link href='/posts/developer-ssl-setup'>SSL Trust Configuration</Link>
+- <a href='oauth-infrastructure-setup'>OAuth Infrastructure Setup</a>
+- <a href='web-technology-setup'>JavaScript Technology Setup</a>
+- <a href='http-debugging-setup'>HTTP Proxy Setup</a>
+- <a href='developer-ssl-setup'>SSL Trust Configuration</a>
 
 **Design Articles**
 
-- <Link href='/posts/user-data'>User Data Management</Link>
-- <Link href='/posts/api-authorization-design'>API Authorization Behaviour</Link>
-- <Link href='/posts/federated-logins'>User Authentication Behaviour</Link>
-- <Link href='/posts/user-sessions-and-token-renewal'>Iframe-Based Access Token Renewal</Link>
-- <Link href='/posts/logout'>Logout</Link>
-- <Link href='/posts/id-tokens'>ID Tokens</Link>
+- <a href='user-data'>User Data Management</a>
+- <a href='api-authorization-design'>API Authorization Behaviour</a>
+- <a href='federated-logins'>User Authentication Behaviour</a>
+- <a href='user-sessions-and-token-renewal'>Iframe-Based Access Token Renewal</a>
+- <a href='logout'>Logout</a>
+- <a href='id-tokens'>ID Tokens</a>
 
 **Updated SPA Code Sample**
 
-- <Link href='/posts/improved-spa-code-sample-overview'>Overview / How to Run the Sample</Link>
-- <Link href='/posts/updated-spa-coding-key-points'>SPA Code Details</Link>
-- <Link href='/posts/updated-api-coding-key-points'>API Code Details</Link>
+- <a href='improved-spa-code-sample-overview'>Overview / How to Run the Sample</a>
+- <a href='updated-spa-coding-key-points'>SPA Code Details</a>
+- <a href='updated-api-coding-key-points'>API Code Details</a>
 
 **Variation – Microsoft Entra ID**
 
-- <Link href='/posts/azure-active-directory-setup'>Entra ID SPA and API Setup</Link>
-- <Link href='/posts/azure-ad-troubleshooting'>Entra ID SPA and API OAuth Flow</Link>
+- <a href='azure-active-directory-setup'>Entra ID SPA and API Setup</a>
+- <a href='azure-ad-troubleshooting'>Entra ID SPA and API OAuth Flow</a>
 
 **Final SPA Code Sample**
 
-- <Link href='/posts/spa-back-end-for-front-end'>Backend for Frontend Behaviour</Link>
-- <Link href='/posts/final-spa-overview'>Overview</Link>
-- <Link href='/posts/how-to-run-the-react-js-spa'>How to Run the Sample</Link>
-- <Link href='/posts/reactjs-codingkeypoints'>Code Details</Link>
+- <a href='spa-back-end-for-front-end'>Backend for Frontend Behaviour</a>
+- <a href='final-spa-overview'>Overview</a>
+- <a href='how-to-run-the-react-js-spa'>How to Run the Sample</a>
+- <a href='reactjs-codingkeypoints'>Code Details</a>
 
 ### Theme 2 – API Architecture
 
@@ -57,75 +57,75 @@ The next theme focuses on the API architecture. This includes coding aspects rel
 
 **Design Articles**
 
-- <Link href='/posts/api-platform-design'>API Platform Overview</Link>
-- <Link href='/posts/api-journey-server-side'>API Journey – Server Side</Link>
-- <Link href='/posts/api-journey-client-side'>API Journey – Client Side</Link>
+- <a href='api-platform-design'>API Platform Overview</a>
+- <a href='api-journey-server-side'>API Journey – Server Side</a>
+- <a href='api-journey-client-side'>API Journey – Client Side</a>
 
 **Supportability**
 
-- <Link href='/posts/effective-api-logging'>Effective API Logging</Link>
-- <Link href='/posts/error-handling-and-supportability'>Error Handling and Supportability</Link>
+- <a href='effective-api-logging'>Effective API Logging</a>
+- <a href='error-handling-and-supportability'>Error Handling and Supportability</a>
 
 **Node.js API**
 
-- <Link href='/posts/api-architecture-node'>Overview</Link>
-- <Link href='/posts/final-nodeapi-coding-key-points'>Code Details</Link>
+- <a href='api-architecture-node'>Overview</a>
+- <a href='final-nodeapi-coding-key-points'>Code Details</a>
 
 **.NET API**
 
-- <Link href='/posts/net-core-code-sample-overview'>Overview</Link>
-- <Link href='/posts/net-core-api-oauth-integration'>OAuth Integration</Link>
-- <Link href='/posts/net-core-api-coding-model'>Code Details</Link>
+- <a href='net-core-code-sample-overview'>Overview</a>
+- <a href='net-core-api-oauth-integration'>OAuth Integration</a>
+- <a href='net-core-api-coding-model'>Code Details</a>
 
 **Java Spring Boot API**
 
-- <Link href='/posts/java-spring-boot-api-overview'>Overview</Link>
-- <Link href='/posts/spring-boot-api-oauth-integration'>OAuth Integration</Link>
-- <Link href='/posts/spring-boot-api-coding-model'>Code Details</Link>
+- <a href='java-spring-boot-api-overview'>Overview</a>
+- <a href='spring-boot-api-oauth-integration'>OAuth Integration</a>
+- <a href='spring-boot-api-coding-model'>Code Details</a>
 
 **Productivity**
 
-- <Link href='/posts/api-automated-tests'>API Automated Tests</Link>
-- <Link href='/posts/log-aggregation-setup'>Log Aggregation Setup</Link>
-- <Link href='/posts/api-technical-support-analysis'>Technical Support Analysis</Link>
+- <a href='api-automated-tests'>API Automated Tests</a>
+- <a href='log-aggregation-setup'>Log Aggregation Setup</a>
+- <a href='api-technical-support-analysis'>Technical Support Analysis</a>
 
 ### Theme 3 – Native Apps
 
 This theme covers solutions for desktop and mobile apps, and uses the recommended OAuth flows. It also provides example apps that can be used as a reference.
 
-- <Link href='/posts/native-architecture-goals'>Native Architecture Goals</Link>
+- <a href='native-architecture-goals'>Native Architecture Goals</a>
 
 **Initial Desktop App Code Sample**
 
-- <Link href='/posts/desktop-apps-overview'>Overview</Link>
-- <Link href='/posts/desktop-app-how-to-run-the-code-sample'>How to Run the Sample</Link>
-- <Link href='/posts/desktop-app-coding-key-points'>Code Details</Link>
+- <a href='desktop-apps-overview'>Overview</a>
+- <a href='desktop-app-how-to-run-the-code-sample'>How to Run the Sample</a>
+- <a href='desktop-app-coding-key-points'>Code Details</a>
 
 **Final Desktop App Code Sample**
 
-- <Link href='/posts/final-desktop-sample-overview'>Overview / How to Run the Sample</Link>
-- <Link href='/posts/final-desktop-app-coding-key-points'>Code Details</Link>
+- <a href='final-desktop-sample-overview'>Overview / How to Run the Sample</a>
+- <a href='final-desktop-app-coding-key-points'>Code Details</a>
 
 **Mobile Setup**
 
-- <Link href='/posts/android-setup'>Android Setup + AppAuth Sample</Link>
-- <Link href='/posts/android-https-debugging'>Android HTTPS Debugging</Link>
-- <Link href='/posts/ios-setup'>iOS Setup + AppAuth Sample</Link>
-- <Link href='/posts/ios-https-debugging'>iOS HTTPS Debugging</Link>
+- <a href='android-setup'>Android Setup + AppAuth Sample</a>
+- <a href='android-https-debugging'>Android HTTPS Debugging</a>
+- <a href='ios-setup'>iOS Setup + AppAuth Sample</a>
+- <a href='ios-https-debugging'>iOS HTTPS Debugging</a>
 
 **Android Code Sample**
 
-- <Link href='/posts/android-code-sample-overview'>Code Sample Behaviour</Link>
-- <Link href='/posts/basicandroidapp-execution'>How to Run the Sample</Link>
-- <Link href='/posts/android-infrastructure-setup'>Infrastructure Setup</Link>
-- <Link href='/posts/android-coding-key-points'>Code Details</Link>
+- <a href='android-code-sample-overview'>Code Sample Behaviour</a>
+- <a href='basicandroidapp-execution'>How to Run the Sample</a>
+- <a href='android-infrastructure-setup'>Infrastructure Setup</a>
+- <a href='android-coding-key-points'>Code Details</a>
 
 **iOS Code Sample**
 
-- <Link href='/posts/ios-code-sample-overview'>Code Sample Behaviour</Link>
-- <Link href='/posts/how-to-run-the-ios-code-sample'>How to Run the Sample</Link>
-- <Link href='/posts/ios-code-sample-infrastructure'>Infrastructure Setup</Link>
-- <Link href='/posts/ios-code-sample-coding-key-points'>Code Details</Link>
+- <a href='ios-code-sample-overview'>Code Sample Behaviour</a>
+- <a href='how-to-run-the-ios-code-sample'>How to Run the Sample</a>
+- <a href='ios-code-sample-infrastructure'>Infrastructure Setup</a>
+- <a href='ios-code-sample-coding-key-points'>Code Details</a>
 
 ### Theme 4 – Cloud Deployment
 
@@ -133,20 +133,20 @@ The final theme covers end-to-end deployment of components to run in the cloud. 
 
 **OAuth Domain Setup**
 
-- <Link href='/posts/cloud-hosting'>Overview</Link>
-- <Link href='/posts/cloud-domain-setup'>Domain Setup</Link>
-- <Link href='/posts/managed-authorization-server-setup'>Cloud Authorization Server Setup</Link>
+- <a href='cloud-hosting'>Overview</a>
+- <a href='cloud-domain-setup'>Domain Setup</a>
+- <a href='managed-authorization-server-setup'>Cloud Authorization Server Setup</a>
 
 **Modern Web Deployment**
 
-- <Link href='/posts/cdn-static-content-delivery'>Web Content Delivery</Link>
+- <a href='cdn-static-content-delivery'>Web Content Delivery</a>
 
 **Serverless APIs**
 
-- <Link href='/posts/serverless-api-overview'>Serverless API Overview</Link>
-- <Link href='/posts/serverless-api-deployment'>Serverless API Deployment</Link>
-- <Link href='/posts/serverless-api-coding-model'>Serverless API Code Details</Link>
+- <a href='serverless-api-overview'>Serverless API Overview</a>
+- <a href='serverless-api-deployment'>Serverless API Deployment</a>
+- <a href='serverless-api-coding-model'>Serverless API Code Details</a>
 
 **Cloud Native**
 
-- <Link href='/posts/cloud--native-updates'>Cloud Native Updates</Link>
+- <a href='cloud--native-updates'>Cloud Native Updates</a>
