--- a/public/posts/quick-start.mdx
+++ b/public/posts/quick-start.mdx
@@ -16,7 +16,7 @@ I deploy the SPA to many global locations using AWS CloudFront. Anyone can run t
 
 - [https://www.authsamples.com](https://www.authsamples.com)
 
-Alternatively, you can follow the <Link href='/posts/how-to-run-the-react-js-spa'>Final SPA Instructions</Link> to run the app's code locally and connect it to cloud-hosted API endpoints. In either case, sign in with one of the test accounts:
+Alternatively, you can follow the <a href='how-to-run-the-react-js-spa'>Final SPA Instructions</a> to run the app's code locally and connect it to cloud-hosted API endpoints. In either case, sign in with one of the test accounts:
 
 ![SPA login](../images/3/spa-login.jpg?v=20240713)
 
@@ -26,7 +26,7 @@ The cross platform Electron React app runs on Windows, macOS and Linux. The [App
 
 ![Desktop view](../images/3/desktop-view.jpg?v=20240925)
 
-The app receives login responses on a redirect URI that uses a private-use URI scheme. To run the app on your local computer you can follow the <Link href='/posts/final-desktop-sample-overview'>Final Desktop App Instructions</Link>.
+The app receives login responses on a redirect URI that uses a private-use URI scheme. To run the app on your local computer you can follow the <a href='final-desktop-sample-overview'>Final Desktop App Instructions</a>.
 
 ![Desktop login](../images/3/desktop-login.jpg)
 
@@ -38,7 +38,7 @@ The Android App is a Single Activity App that uses Kotlin and Jetpack Compose. T
     <img src='../images/3/android-view.jpg?v=20240912' alt='Android view' />
 </div>
 
-Logins run on a *Chrome Custom Tab*, with modern security and good usability. To run the app from Android Studio you can follow the <Link href='/posts/basicandroidapp-execution'>Android Code Sample Instructions</Link>.
+Logins run on a *Chrome Custom Tab*, with modern security and good usability. To run the app from Android Studio you can follow the <a href='basicandroidapp-execution'>Android Code Sample Instructions</a>.
 
 <div className='smallimage'>
     <img src='../images/3/android-login.jpg?v=20240912' alt='Android login' />
@@ -52,7 +52,7 @@ The [iOS AppAuth Library](https://github.com/openid/AppAuth-iOS) implements Open
     <img src='../images/3/ios-view.jpg?v=20240713' alt='iOS view' />
 </div>
 
-Logins run on Apple’s *ASWebAuthenticationSession* window. To run the app from Xcode you can follow the <Link href='/posts/how-to-run-the-ios-code-sample'>iOS Code Sample Instructions</Link>.
+Logins run on Apple’s *ASWebAuthenticationSession* window. To run the app from Xcode you can follow the <a href='how-to-run-the-ios-code-sample'>iOS Code Sample Instructions</a>.
 
 <div className='smallimage'>
     <img src='../images/3/ios-login.jpg?v=20240713' alt='iOS login' />
@@ -62,10 +62,10 @@ Logins run on Apple’s *ASWebAuthenticationSession* window. To run the app from
 
 APIs support the frontend code samples and help to ensure reliable end-to-end flows. The following posts walk through the key technical behaviours that I use for both APIs and clients, to achieve a modern and productive architecture.
 
-- <Link href='/posts/api-journey-server-side'>API Journey – Server Side</Link>
-- <Link href='/posts/api-journey-client-side'>API Journey – Client Side</Link>
+- <a href='api-journey-server-side'>API Journey – Server Side</a>
+- <a href='api-journey-client-side'>API Journey – Client Side</a>
 
 ### Next
 
-- Return to the <Link href='/'>Home Page</Link>.
-- For a list of all blog posts see the <Link href='/posts/index'>Index Page</Link>.
+- Return to the <a href='home.mdx'>Home Page</a>.
+- For a list of all blog posts see the <a href='index.mdx'>Index Page</a>.
