--- a/public/posts/user-data.mdx
+++ b/public/posts/user-data.mdx
@@ -1,6 +1,6 @@
 # User Data Management
 
-In the previous post I explained <Link href='/posts/developer-ssl-setup'>SSL Trust Configuration</Link> for a development computer. Next, I summarise some practicalities of user management in an OAuth Architecture. In many setups identity data and business data need to work together.
+In the previous post I explained <a href='developer-ssl-setup'>SSL Trust Configuration</a> for a development computer. Next, I summarise some practicalities of user management in an OAuth Architecture. In many setups identity data and business data need to work together.
 
  ### User Attributes in Business Data
 
@@ -10,7 +10,7 @@ In many mature backend systems, users have a *Data History* that includes an exi
 
 ### User Attributes in Identity Data
 
-When planning a migration to OAuth, first design your user account schema in the authorization server. The first four fields in the below table are likely to be standard user attributes built into your authorization server, whereas the last two fields are custom values. The <Link href='/posts/oauth-infrastructure-setup'>OAuth Infrastructure Setup</Link> post explained how I added these values to this blog's default authorization server.
+When planning a migration to OAuth, first design your user account schema in the authorization server. The first four fields in the below table are likely to be standard user attributes built into your authorization server, whereas the last two fields are custom values. The <a href='oauth-infrastructure-setup'>OAuth Infrastructure Setup</a> post explained how I added these values to this blog's default authorization server.
 
 | Attribute | Description |
 | --------- | ----------- |
@@ -76,5 +76,5 @@ I explained the main design choices when storing user attributes in an OAuth arc
 
 ### Next
 
-- I explain this blog’s <Link href='/posts/api-authorization-design'>API Authorization Behaviour</Link>.
-- For a list of all blog posts see the <Link href='/posts/index'>Index Page</Link>.
+- I explain this blog’s <a href='api-authorization-design'>API Authorization Behaviour</a>.
+- For a list of all blog posts see the <a href='index'>Index Page</a>.
