--- a/public/posts/web-architecture-goals.mdx
+++ b/public/posts/web-architecture-goals.mdx
@@ -1,6 +1,6 @@
 # Web Architecture Goals
 
-The <Link href='/'>Home Page</Link> described OAuth in terms of overall goals for a software platform. In this post I explain qualities to look for in an optimal web architecture, which is not just about security. This post briefly summarises some goals and concerns for web apps.
+The <a href='home.mdx'>Home Page</a> described OAuth in terms of overall goals for a software platform. In this post I explain qualities to look for in an optimal web architecture, which is not just about security. This post briefly summarises some goals and concerns for web apps.
 
 ### Best User Experience
 
@@ -66,9 +66,9 @@ This blog's posts and the accompanying code samples explain OAuth features and d
 
 | Stage | Description |
 | ----- | ----------- |
-| <Link href='/posts/basicspa-overview'>Basics</Link> | Getting an SPA, API and authorization server working together, with a developer friendly setup. |
-| <Link href='/posts/improved-spa-code-sample-overview'>Updated</Link> | SPA session management for a complete user experience, and flexible API authorization to protect data. |
-| <Link href='/posts/final-spa-overview'>Final</Link> | A security hardened SPA that runs from a content delivery network and interacts with cloud deployed APIs. |
+| <a href='basicspa-overview'>Basics</a> | Getting an SPA, API and authorization server working together, with a developer friendly setup. |
+| <a href='improved-spa-code-sample-overview'>Updated</a> | SPA session management for a complete user experience, and flexible API authorization to protect data. |
+| <a href='final-spa-overview'>Final</a> | A security hardened SPA that runs from a content delivery network and interacts with cloud deployed APIs. |
 
 ### Where Are We?
 
@@ -76,5 +76,5 @@ I articulated some desired behaviour, and next I provide a code sample to get st
 
 ### Next
 
-- I provide an <Link href='/posts/basicspa-overview'>Initial SPA Code Sample Overview</Link>
-- For a list of all blog posts see the  <Link href='/posts/index'>Index Page</Link>
+- I provide an <a href='basicspa-overview'>Initial SPA Code Sample Overview</a>
+- For a list of all blog posts see the  <a href='index'>Index Page</a>
